# speck

./: .gitignore  Cargo.toml  PROMPT.md  README.md
.beads/: beads.db  beads.db-shm  beads.db-wal  config.yaml  issues.jsonl
.blacksmith/: ANALYSIS_PROMPT.md  config.toml
.claude/skills/prd-to-beads/: SKILL.md
.github/workflows/: ci.yml
.speck/tasks/: SAMPLE-1.yaml
prd/: SPEC-v2-affected-set-derivation.md  spec-sandwich.md
src/: cli.rs  context.rs  lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/live/: clock.rs  filesystem.rs  git.rs  id_gen.rs  issues.rs  llm.rs  mod.rs  shell.rs
src/adapters/recording/: clock.rs  filesystem.rs  git.rs  id_gen.rs  issues.rs  llm.rs  mod.rs  shell.rs
src/adapters/replaying/: clock.rs  filesystem.rs  git.rs  id_gen.rs  issues.rs  llm.rs  mod.rs  shell.rs
src/cassette/: config.rs  format.rs  mod.rs  recorder.rs  replayer.rs  session.rs
src/commands/: deps.rs  map.rs  mod.rs  plan.rs  show.rs  status.rs  sync.rs  validate.rs  verify.rs
src/linkage/: drift.rs  mod.rs  resolve.rs
src/map/: diff.rs  generator.rs  mod.rs
src/plan/: conversation.rs  feedback.rs  mod.rs  reconcile.rs  score.rs  signal.rs  survey.rs
src/ports/: clock.rs  filesystem.rs  git.rs  id_gen.rs  issues.rs  llm.rs  mod.rs  shell.rs
src/spec/: check.rs  mod.rs  signal.rs  task_spec.rs  verification.rs
src/store/: mod.rs
src/sync/: beads.rs  mod.rs
src/validate/: mod.rs
test_fixtures/: monolithic.yaml  plan_session.yaml
tests/: cli.rs  record_replay.rs
