[package]
name = "speck"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI scaffold for planning and verification workflows"
license = "MIT"
repository = "https://example.com/speck"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
