[package]
name = "speck"
version = "0.1.0"
edition = "2021"
description = "Minimal CLI scaffold for planning and verification workflows"
license = "MIT"
repository = "https://example.com/speck"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[[bin]]
name = "cassette_split"
path = "src/bin/cassette_split.rs"
